--- a/css/style.css
+++ b/css/style.css
@@ -8,40 +8,58 @@
     top: -5%;
     /*雪を適当な幅で降らせる*/
     text-shadow:
-    5vw   -100px 2px,
-    10vw  -400px 3px,
-    20vw  -500px 4px,
-    30vw  -580px 1px,
-    39vw  -250px 2px,
-    42vw  -340px 5px,
-    56vw  -150px 2px,
-    63vw  -180px 0,
-    78vw  -220px 4px,
-    86vw  -320px 9px,
-    94vw  -170px 7px;
+        5vw -100px 2px,
+        10vw -400px 3px,
+        20vw -500px 4px,
+        30vw -580px 1px,
+        39vw -250px 2px,
+        42vw -340px 5px,
+        56vw -150px 2px,
+        63vw -180px 0,
+        78vw -220px 4px,
+        86vw -320px 9px,
+        94vw -170px 7px;
     /*雪アニメーション1*/
     animation: roll 5s linear infinite;
 }
+
 /*2つめの雪アニメーション*/
-.snow2nd{animation: anim 8s linear infinite;}
+.snow2nd {
+    animation: anim 8s linear infinite;
+}
 
 @keyframes roll {
-    0% {transform:rotate(0deg);}
-    90% {opacity:1;}
-    100% {transform:rotate(20deg);top:100%;opacity:0;}
+    0% {
+        transform: rotate(0deg);
+    }
+
+    90% {
+        opacity: 1;
+    }
+
+    100% {
+        transform: rotate(20deg);
+        top: 100%;
+        opacity: 0;
+    }
 }
+
 @keyframes anim {
-    100% {color:transparent;top:150%;}
+    100% {
+        color: transparent;
+        top: 150%;
+    }
 }
 
-body{
-    background-image:linear-gradient(90deg,#f10000 50%,white 51%);
-    background-size:100px 100px;
+body {
+    background-image: linear-gradient(90deg, #f10000 50%, white 51%);
+    background-size: 75px 75px;
+    margin: 0;
 }
 
-#wScratchPad{
+#wScratchPad {
     display: flex;
-    position:relative;
+    position: relative;
     /*border:solid black 1px;*/
     text-align: center;
     flex-wrap: wrap;
@@ -49,6 +67,32 @@ body{
     align-content: space-around;
 }
 
-#scratchButton{
+#scratchButton {
     text-align: center;
+}
+
+#header {
+    font-family: 'M PLUS 1', sans-serif;
+    font-family: 'Shippori Mincho B1', serif;
+    font-family: 'Zen Maru Gothic', serif;
+    font-weight: bold;
+    text-align: center;
+    width: 100%;
+    height: 50px;
+    /*background-color: #c4c0c0;*/
+    color: #000000;
+    font-size: 30px;
+    background-image: url(../images/hinamatsuri_byoubu_gold.png);
+}
+
+#sentence {
+    margin-bottom: 5px;
+    font-family: 'M PLUS 1', sans-serif;
+    font-family: 'Shippori Mincho B1', serif;
+    font-family: 'Zen Maru Gothic', serif;
+    text-align: center;
+    font-size: 18px;
+    width: 100%;
+    height: 100%;
+    background-color: white;
 }
