[chore]ボタンの位置を修正

--- a/css/style.css
+++ b/css/style.css
@@ -65,10 +65,16 @@ body {
     flex-wrap: wrap;
     flex-direction: column;
     align-content: space-around;
+    margin-bottom: 5px;
 }
 
 #scratchButton {
     text-align: center;
+}
+
+button{
+    color:black;
+    background-color: whi;
 }
 
 #header {
