--- a/css/style.css
+++ b/css/style.css
@@ -100,5 +100,5 @@ button{
     font-size: 18px;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: rgb(255, 253, 228);
 }
